# SimpleRenderer

./: CMakeLists.txt  RGB.cpp  helper_functions.cpp  helper_functions.h  library.cpp  main.cpp  map.txt  vector.h
header_files/: RGB.h  all_headers.h  constants.h  helper_functions.h  implemented_headers.h  library.h  player.h  standard_libraries.h  state.h  vector.h  wall.h
